--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Orbit Website</title>
+    <title>orbit</title>
     <link
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,7 +17,13 @@
           <h1>Orbit</h1>
         </div>
         <div class="col-md-2">
-          <button class="btn btn-primary">Button</button>
+            <a href="mailto:orbit-sustainability@gmail.com">
+          <button            
+            class="btn btn-primary"            
+          >          
+            → get in touch        
+          </button>
+        </a>
         </div>
       </div>
 
@@ -25,9 +31,12 @@
       <div class="row mt-3">
         <!-- Left column: Text/Info -->
         <div class="col-md-4">
-          <h3>Title</h3>
-          <p>Text</p>
-          <p>Description</p>
+          <h3>[ˈɔʁbɪt] - crafting sustainable future products & services</h3>
+          <p>
+            Empowers consultancies to develop their offering in the field of
+            sustainable product & service strategies with AI-powered modelling &
+            analysis workflows.
+          </p>
         </div>
 
         <!-- Right column: Image/Graphic -->
@@ -42,7 +51,7 @@
         </div>
       </div>
 
-      <!-- Thumbnails -->
+      <!-- Thumbnails
       <div class="row mt-3">
         <div class="col-md-4">
           <img
@@ -74,13 +83,14 @@
       </div>
 
       <!-- Footer -->
-      <div class="row mt-5">
+      <!-- <div class="row mt-5">
         <div class="col-md-12">
           <h2>Headline</h2>
           <p>Text</p>
         </div>
       </div>
-    </div>
+    </div> -->
+    -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
