--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           <p>Text</p>
         </div>
       </div>
+    -->
 
       <!-- Footer -->
       <!-- <div class="row mt-5">
@@ -89,8 +90,9 @@
           <p>Text</p>
         </div>
       </div>
-    </div> -->
+    </div> 
     -->
+    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
