description text updeate

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
         <div class="col-md-4">
           <h3>[ˈɔʁbɪt] - crafting sustainable future products & services</h3>
           <p>
-            Empowers consultancies to develop their offering in the field of
-            sustainable product & service strategies with AI-powered modelling &
-            analysis workflows.
+            orbit is a software for consultancies to cocreate, model, and
+            analyze innovative sustainable products and services.
           </p>
         </div>
 
